--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,9 @@
 [OPTIONS]
-SteamAppsPath = D:\SteamLibrary\steamapps
-Unstable = False
-Language = en
+steamappspath = D:\SteamLibrary\steamapps
+unstable = False
+language = en
 
 [INSTANCE1]
-Name=test1
-WorshopList = 211,1780994893
-ModsList=A Post Nuclear Starbound,Panda
-[INSTANCE2]
-Name=No Mod
-WorshopList = None
-ModsList=None
+name = Vanilla
+workshoplist = None
+modslist = None
