--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,8 @@
 [OPTIONS]
-steamappspath = D:\SteamLibrary\steamapps
+steamappspath = D:/SteamLibrary/steamapps
 unstable = False
-language = en
+language = fr
+editormode = 3
 
 [INSTANCE1]
 name = Vanilla
