--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,11 @@
 [OPTIONS]
 steamappspath = D:/SteamLibrary/steamapps
 unstable = False
-language = fr
+language = en
 editormode = 3
 
 [INSTANCE1]
 name = Vanilla
 workshoplist = None
 modslist = None
+savelocation = instance
