--- a/config.ini
+++ b/config.ini
@@ -7,6 +7,5 @@ editormode = 3
 [INSTANCE1]
 name = Vanilla
 workshoplist = None
-modslist = None
+modslist = JAIME LES PANDAS.pak
 savelocation = default
-
