--- a/files/config.ini
+++ b/files/config.ini
@@ -21,16 +21,27 @@ name = TestColletion
 modslist = None
 workshoplist = None
 
-
 [INSTANCE4]
 savelocation = default
 name = TestColletion
 modslist = None
 workshoplist = None
 
-
 [INSTANCE5]
 savelocation = default
 name = TestColletion
 modslist = None
 workshoplist = None
+
+[INSTANCE6]
+name = qsdqds
+workshoplist = None
+modslist = None
+savelocation = default
+
+[INSTANCE7]
+name = qsd
+workshoplist = None
+modslist = None
+savelocation = default
+
